public interface Atacar {
    void agir(String nome);

    public void atacar(String nome);
}
